# Tweet_Sentiment_Analyzer

./: .gitignore  README.rst  pyproject.toml
test_flask/my_project/: database.py  flask_create_users_class_2.py  pythonAPY_.py
test_flask/my_project/templates/: Option.html  name_searcher.html  topic_searcher.html
tests/: test_test_flask.py
